--- a/game.html
+++ b/game.html
@@ -11,5 +11,6 @@
     <h1>Thanks beta testers for trying out InfinitySky</h1>
     <h2>If game doesn't start dev servers may be offline</h2>
     <script src="game.js"></script>
+    <input id="gameinput" placeholder="Input text here">
   </body>
 </html>
